下订单初步完成

--- a/webapp/order.html
+++ b/webapp/order.html
@@ -11,29 +11,29 @@
 </head>
 <body>
 <div id="container">
-<div id="cart">
-	<span id="cart_loading"></span>
-	<div id="cart_none">您的购物车中还没有商品，请选购！</div>
-	<div id="cart_container"></div>
-</div>
+	<div id="cart">
+		<span id="cart_loading"></span>
+		<div id="cart_none">您的购物车中还没有商品，请选购！</div>
+		<div id="cart_container"></div>
+	</div>
 	<div id="logalleft">
-    <div id="top-overlay"></div>
-    <!----吊顶栏------>
-	<div class="top">
-    <div class="top_right">
-    <ul>
-    <li>欢迎来到Symagic！</li>
-    <!--<s:property value="#session.username"/><s:property value="#session.nickname"/>-->
-    <li id="login_top" onclick="load_login();"><a>登录</a></li>
-    <li id="regist_top" onclick="load_regist();"><a>免费注册</a></li>
-    <li class="division">|</li><li id="mymall"><a href="user.html"><span id="mymall_icon"></span>我的商城</a></li><li class="division">|</li>
-    <li id="cart_top"><a id="cart_a" href="cart.html">
-    <span id="cart_icon"></span>购物车 <strong id="cart_num">0</strong> 件</a>
-    </li>
-    </ul>
-    </div>
-    </div>
-  <!------吊顶结束----->
+    	<div id="top-overlay"></div>
+    	<!----吊顶栏------>
+		<div class="top">
+    		<div class="top_right">
+    			<ul>
+    				<li>欢迎来到Symagic！</li>
+    				<!--<s:property value="#session.username"/><s:property value="#session.nickname"/>-->
+    				<li id="login_top" onclick="load_login();"><a>登录</a></li>
+    				<li id="regist_top" onclick="load_regist();"><a>免费注册</a></li>
+    				<li class="division">|</li><li id="mymall"><a href="user.html"><span id="mymall_icon"></span>我的商城</a></li><li class="division">|</li>
+    				<li id="cart_top"><a id="cart_a" href="cart.html">
+    				<span id="cart_icon"></span>购物车 <strong id="cart_num">0</strong> 件</a>
+    				</li>
+    			</ul>
+    		</div>
+    	</div>
+  		<!------吊顶结束----->
 	</div>
 	<div id="globallink">
 		<ul>
@@ -48,6 +48,7 @@
 		</ul>
 	</div>
     <div class="clear"></div>
+    <form action="order_submit" method="post">
     <div id="order_container">
     	<div id="c-info">
         	<h1>收货人信息</h1>
@@ -62,14 +63,34 @@
                 </div>
             	<table width="100%" cellspacing="0" border="0">
                 	<tbody>
-                    	<tr><td width="80" valign="middle" align="right"><font color="red">*</font>收货人姓名：</td><td><input class="txt" type="text"/></td></tr>
-                        <tr>
-                          <td valign="middle" align="right"><font color="red">*</font>所在地区：</td><td><select><option value="">请选择</option></select><select><option value="">请选择</option></select><select><option value="">请选择</option></select></td></tr>
                     	<tr>
-                    	  <td valign="middle" align="right"><font color="red">*</font>详细地址：</td><td><span id="consign_address"></span><input type="text" class="txt long"></td></td></tr>
-                    	<tr><td valign="middle" align="right"><font color="red">*</font>手机号码：</td><td><input type="text" class="txt"/>或者&nbsp;&nbsp;或&nbsp;&nbsp;固定电话：<input type="text" class="txt"></td></tr>
-                    	<tr><td valign="middle" align="right">邮箱地址：</td><td>43234@qq.com</td></tr>
-                    	<tr><td valign="middle" align="right"><font color="red">*</font>邮政编码：</td><td><input type="text" class="txt short"/></td></tr>
+                        	<td width="80" valign="middle" align="right"><font color="red">*</font>收货人姓名：</td>
+                            <td><input class="txt" type="text"/></td>
+                        </tr>
+                        <tr>
+                        	<td valign="middle" align="right"><font color="red">*</font>所在地区：</td>
+                            <td>
+                            	<select><option value="">请选择</option></select>
+                                <select><option value="">请选择</option></select>
+                                <select><option value="">请选择</option></select>
+                            </td>
+                        </tr>
+                    	<tr>
+                        	<td valign="middle" align="right"><font color="red">*</font>详细地址：</td>
+                            <td><span id="consign_address"></span><input type="text" class="txt long"></td>
+                        </tr>
+                    	<tr>
+                        	<td valign="middle" align="right"><font color="red">*</font>手机号码：</td>
+                            <td><input type="text" class="txt"/>或者&nbsp;&nbsp;或&nbsp;&nbsp;固定电话：<input type="text" class="txt"/></td>
+                        </tr>
+                    	<tr>
+                        	<td valign="middle" align="right">邮箱地址：</td>
+                            <td>43234@qq.com</td>
+                        </tr>
+                    	<tr>
+                        	<td valign="middle" align="right"><font color="red">*</font>邮政编码：</td>
+                            <td><input type="text" class="txt short"/></td>
+                        </tr>
                     </tbody>
                 </table>
                 <span class="add-to-address">添加信息至地址簿</span><span>重置内容</span>
@@ -79,38 +100,65 @@
         	<h1>支付及配送方式</h1>
             <table width="100%" cellspacing="0" border="0">
                 	<tbody>
-                    	<tr><td width="100" valign="middle" align="left"><h1>支付方式</h1></td><td></td></tr>
-                    	<tr><td><input type="radio" checked="checked">货到付款</input></td><td class="comment">送货上门后付款，使用现金</td></tr>
+                    	<tr>
+                        	<td width="100" valign="middle" align="left"><h1>支付方式</h1></td>
+                            <td></td>
+                        </tr>
+                    	<tr>
+                        	<td><input type="radio" checked="checked">货到付款</input></td>
+                            <td class="comment">送货上门后付款，使用现金</td>
+                        </tr>
                     </tbody>
             </table>
             <table width="100%" cellspacing="0" border="0">
                 	<tbody>
-                    	<tr><td width="100" valign="middle" align="left"><h1>配送方式</h1></td><td></td></tr>
-                    	<tr><td><input type="radio" checked="checked">快递</input></td><td class="comment">使用默认的快递方式，快捷省事</td></tr>
+                    	<tr>
+                        	<td width="100" valign="middle" align="left"><h1>配送方式</h1></td>
+                        	<td></td>
+                        </tr>
+                    	<tr>
+                        	<td><input type="radio" checked="checked">快递</input></td>
+                            <td class="comment">使用默认的快递方式，快捷省事</td>
+                        </tr>
                     </tbody>
             </table>
         </div>
         <div id="item_list">
         	<h1>商品清单</h1>
             <div id="item_table">
-            <table >
-            	<tbody>
-                	<tr class="thead"><td width="9%">商品ID</td><td width="37%">商品名称</td><td width="13%">商城价</td><td width="13%">商品数量</td><td width="13%">商品小计</td><td width="15%">可获积分</td></tr>
-                	<!--商品列表迭代开始-->
-                    <tr ><td>623456</td><td>测试测试测试</td><td>￥20.00</td><td>￥20.00</td><td>20</td><td>10</td></tr>
-                    <!--商品列表迭代结束-->
-                </tbody>
-            </table>
+            	<table >
+            		<tbody>
+                		<tr class="thead">
+                 	   		<td width="9%">商品ID</td>
+                    		<td width="37%">商品名称</td>
+                    		<td width="13%">商城价</td>
+                    		<td width="13%">商品数量</td>
+                    		<td width="13%">商品小计</td>
+                    		<td width="15%">可获积分</td>
+                    	</tr>
+                		<!--商品列表迭代开始-->
+                    	<tr>
+                    		<td>623456</td>
+                        	<td>测试测试测试</td>
+                        	<td>￥20.00</td>
+                        	<td>￥20.00</td>
+                        	<td>20</td>
+                        	<td>10</td>
+                    	</tr>
+                    	<!--商品列表迭代结束-->
+                	</tbody>
+           		</table>
             </div>
         </div>
         <div id="ware">
-        <h1>结算</h1>
-        <div class="total_price"><span id="pay">应付总额：<strong>￥200.00</strong>元</span></div>
-        <div class="clear"></div>
-        <div class="order_confirm"></div>
-        <div class="clear"></div>
+        	<h1>结算</h1>
+        	<div class="total_price"><span id="pay">应付总额：<strong>￥200.00</strong>元</span></div>
+        	<div class="clear"></div>
+        	<div class="order_confirm"></div>
+        	<div class="clear"></div>
         </div>     
     </div>
+    </form>
 	<div id="footer">
 		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：admin@163.com </span>
 		<span id="footerright"> B2C商城  Power by IBM &nbsp;</span>
