修补大量bug，初步完成地址簿

--- a/webapp/lib/regist.html
+++ b/webapp/lib/regist.html
@@ -84,8 +84,8 @@
 				 <tr>
 				 <th></th>
 				 	<td><input type="submit" class="bt2" name="button2" value="提交" />
-						&nbsp;<input type="Reset" class="bt2" name="button1" value="重填" />
-						&nbsp;<input type="Button" class="bt2" name="button3" value="返回" onClick=""/>
+						&nbsp;
+						
 					</td>
 				 </tr>
         </table>
