--- a/webapp/lib/login.html
+++ b/webapp/lib/login.html
@@ -34,14 +34,13 @@
 				 <tr >
                  <td></td>
                  <td>
-                 <a href="pwd_find.html"><span class="red left_float">忘记密码？</span></a></td>
+                 <a href="forget_password"><span class="red left_float">忘记密码？</span></a></td>
                  <td></td>
                  </tr>
 				 <tr>
 				 <th></th>
 				 	<td><input type="submit" name="button2" value="登陆" >
-						&nbsp;<input type="Reset" name="button1" value="重填" onClick="">
-						&nbsp;<input type="Button" name="button2" value="注册" onClick="">
+&nbsp;						&nbsp;<input type="Button" name="button2" value="注册" onClick="clear_notice();load_regist();">
 					
 					</td>
 				 </tr>
