--- a/webapp/item_list.html
+++ b/webapp/item_list.html
@@ -80,7 +80,20 @@
         </dl>
         </div>
         <div  class="user_note">
-			<div class="fliter"><font>商品搜索</font><span class="collapse" onclick="show_item_search(this);"></span></div>
+			<div class="fliter1">
+            	<font>商品搜索</font>
+                <div id="page_container">
+                	<a>上一页</a>
+                	<a class="selected">1</a>
+                    <a class="selected">1</a>
+                    <a >2</a>
+                    <a >2</a>
+                    <a >2</a>
+                    <span id="dot">...</span>
+                    <a>下一页</a>
+                </div>
+            	<span class="collapse" onclick="show_item_search(this);"></span>
+            </div>
 			<div id="item_search1" class="user_note_content hide">
 				<table>
 				<tr>
@@ -202,7 +215,7 @@
  <div class="user_note">
  	<!--<div class="head"><strong>商品列表</strong></div>-->
    <div id="item_container">
-   <div class="fliter"></div>
+   <div class="fliter1"></div>
    <!--商品迭代div-->
    <div class="item"><div class="p-img"><div class="i-img"><a  href="item_info.html"><img src="image/ssbs.jpg"></a></div></div><div class="dl"><div class="p-name"><a target="_blank" href="">BVLGARI Chinese-English Edn (PB)(宝格丽)</a></div>
 
