--- a/webapp/comment_add.html
+++ b/webapp/comment_add.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<title>BC2商城</title>
+<title>Symagic网上书城</title>
 <link href="css/frame.css" rel="stylesheet" type="text/css"/>
 <script language="javascript" src="js/checkform.js"></script>
 <script type="text/javascript" src="js/yf_ADS.js"></script>
@@ -28,7 +28,7 @@
 			<li><a href="favorite.html">收藏夹</a></li>
 			<li><a href="cart.html">我的购物车</a></li>
 			<li><a href="tradequery.html">交易查询</a></li>
-			<li><a href="send_notes.html">送货说明</a></li>
+			<li><a href="send_notes.jsp">购物指引</a></li>
 			<li><a href="" class="nouseful">&nbsp;</a></li>
 		</ul>
 	</div>
