--- a/webapp/item_list.html
+++ b/webapp/item_list.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<title>BC2商城</title>
+<title>Symagic网上书城</title>
 <link href="css/frame.css" rel="stylesheet" type="text/css"/>
 <link href="css/item.css" rel="stylesheet" type="text/css"/>
 <script type="text/javascript" src="js/jquery.js"></script>
@@ -48,7 +48,7 @@
 			<li><a class="nouseful">&nbsp;</a></li>
 		</ul>
 	</div>
-	<!--<div id="banner"></div>-->
+	
 	<div id="main">
 		<div id="search2">
 			<div id="searchleft">
