--- a/webapp/regist.html
+++ b/webapp/regist.html
@@ -42,7 +42,7 @@
 			<li><a href="favorite.html">收藏夹</a></li>
 			<li><a href="address.html">地址簿</a></li>
 			<li><a href="tradequery.html">交易查询</a></li>
-			<li><a href="send_notes.html">送货说明</a></li>
+			<li><a href="send_notes.jsp">购物指引</a></li>
             <li><a href="credit_query.html">积分查询</a></li>
 			<li><a class="nouseful">&nbsp;</a></li>
 		</ul>
