--- a/webapp/item_info.html
+++ b/webapp/item_info.html
@@ -40,12 +40,12 @@
 	</div>
 	<div id="globallink">
 		<ul>
-			<li><a href="index.html">首页</a></li>
+			<li><a href="index">首页</a></li>
 			<li><a href="item_list.html">商品列表</a></li>
 			<li><a href="favorite.html">收藏夹</a></li>
 			<li><a href="address.html">地址簿</a></li>
 			<li><a href="tradequery.html">交易查询</a></li>
-			<li><a href="send_notes.jsp">购物指引</a></li>
+			<li><a href="send_notes">购物指引</a></li>
             <li><a class="nouseful">&nbsp;</a></li>
 			<li><a class="nouseful">&nbsp;</a></li>
 		</ul>
@@ -55,7 +55,7 @@
 		<div id="search2">
 			<div id="searchleft">
 				<img src="image/ico_site.jpg"  id="ico_site"/>
-				网站路径：<a href="index.html">首页</a>&gt;&gt;<a href="#">商品详细信息</a>
+				网站路径：<a href="index">首页</a>&gt;&gt;<a href="#">商品详细信息</a>
 			</div>
 			<div id="searchright2">
 			  <input type="text" name="product" id="textInput"/>
@@ -148,9 +148,10 @@
         </div>
     </div>
       <div id="footer">
-		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：admin@163.com </span>
-		<span id="footerright"> B2C商城  Power by IBM &nbsp;</span>
-	</div>
+				<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 |
+					电子邮件：Symagics@gmail.com </span> <span id="footerright"> Symagic网上书城
+					Power by Symagic &nbsp;</span>
+			</div>
 </div>
 
 </body>
