--- a/webapp/lib/login.html
+++ b/webapp/lib/login.html
@@ -22,7 +22,7 @@
 					</td>
 					<td class="itemsearchtd2"></td>
                    </tr>
-          		 <tr class="">
+          		 <tr id="login_error_captcha" class="hide">
 				 <th class="itemsearchth">验证码：</th>
             		<td class="itemsearchtd1">
 						<input type="text" name="captchaValue" id="captchaValue" class="inputtext"/>
