购物车全功能实现

--- a/webapp/comment_add.html
+++ b/webapp/comment_add.html
@@ -40,6 +40,7 @@
 				网站路径：<a href="index">首页</a>&gt;&gt;<a href="item_info.html">商品信息</a>&gt;&gt;<a href="">添加评论</a>
 			</div>
 			<div id="searchright2">
+            	<input style="display:none" name="page" value="1">
 			  <input type="text" name="product" id="textInput"/>
 			  <input type="button" name="Submit" value="搜索" id="searchbutton" onClick="javascript:window.open('item_search_list.html','_parent','')">
 			</div>
