--- a/webapp/pwd_find.html
+++ b/webapp/pwd_find.html
@@ -38,6 +38,7 @@
 				网站路径：<a href="index">首页</a>&gt;&gt;<a href="pwd_find.html"> 找回密码</a>
 			</div>
 			<div id="searchright2">
+            	<input style="display:none" name="page" value="1">
 			  <input type="text" name="product" id="textInput"/>
 			  <input type="button" name="Submit" value="搜索" id="searchbutton" onClick="javascript:window.open('item_search_list.html','_parent','')">
 			</div>
