--- a/webapp/ok.html
+++ b/webapp/ok.html
@@ -63,6 +63,7 @@
 			</div>
 			<form action="quick_search" method="post">
 			<div id="searchright2">
+            	<input style="display:none" name="page" value="1">
 			  <input type="text" name="keyword" id="textInput"/>
 			  <input type="submit" value="搜索" id="searchbutton" />
 			</div>
