--- a/webapp/order_confirm.html
+++ b/webapp/order_confirm.html
@@ -41,6 +41,7 @@
 				网站路径：<a href="cart.html">购物车</a>&gt;&gt;<a href="#"><span class="red">确认订单</span></a>
 			</div>
 			<div id="searchright2">
+            	<input style="display:none" name="page" value="1">
 			  <input type="text" name="product" id="textInput"/>
 			  <input type="button" name="Submit" value="搜索" id="searchbutton" onClick="javascript:window.open('item_search_list.html','_parent','')">
 			</div>
