--- a/webapp/regist.html
+++ b/webapp/regist.html
@@ -55,6 +55,7 @@
 				网站路径：<a href="index">首页</a>&gt;&gt;<a href="">新用户注册</strong></a>
 			</div>
 			<div id="searchright2">
+            	<input style="display:none" name="page" value="1">
 			  <input type="text" name="product" id="textInput"/>
 			  <input type="button" name="Submit" value="搜索" id="searchbutton" onClick="javascript:window.open('item_search_list.html','_parent','')">
 			</div>
