--- a/webapp/lib/login.html
+++ b/webapp/lib/login.html
@@ -9,7 +9,7 @@
 				   <tr>
 					<th class="itemsearchth" >用户名：</th>
             		<td class="itemsearchtd1">
-					<input type="Text" class="inputtext_gray" name="userName" id="userName" onFocus="onfocus_check(this,'邮箱地址')" onblur="onblur_check(this,'邮箱地址')" value="邮箱地址" maxlength="30">
+					<input type="Text" class="inputtext_gray" name="userName" id="userName" onFocus="onfocus_check(this,'邮箱地址')" onblur="onblur_check(this,'邮箱地址')" value="邮箱地址" >
                     </td>
 					<td class="itemsearchtd2">
 					</td>
