--- a/webapp/lib/regist.html
+++ b/webapp/lib/regist.html
@@ -8,7 +8,7 @@
 				   <tr>
 					<th class="itemsearchth" ><span class="red">*</span>用&nbsp;户&nbsp;名：</th>
             		<td class="itemsearchtd1">
-						<input type="Text" class="inputtext_gray" name="userName" id="userName" msg_num="" onFocus="onfocus_check(this,'邮箱地址')" onblur="onblur_check(this,'邮箱地址')" value="邮箱地址" >
+						<input type="Text" class="inputtext_gray" name="userName" id="userName" msg_num="" onFocus="onfocus_check(this,'邮箱地址')" onblur="onblur_check(this,'邮箱地址')" value="邮箱地址" maxlength="20">
 					</td>
 					<td class="itemsearchtd2">
 						<span class="loading hide"></span>			</td>
@@ -25,8 +25,8 @@
 				 <tr>
 				 <th class="itemsearchth"><span class="red">*</span>登录密码：</th>
             		<td class="itemsearchtd1">
-					  	<input type="password" id="psaaword" class="inputtext hide" name="password" onblur="password_onblur(this)" value="" maxlength="20" />
-                    <input type="text" class="inputtext_gray" onFocus="passwordtext_onfocus(this)" value="输入6至20位密码" msg_num=""/>
+					<input type="password" id="psaaword" class="inputtext hide" name="password" onblur="password_onblur(this)" value="" maxlength="20" />
+                    <input type="text" class="inputtext_gray" onFocus="passwordtext_onfocus(this)" value="输入6至20位密码" msg_num="" />
 					</td>
 					<td class="itemsearchtd2">
 					</td>
