--- a/webapp/lib/regist.html
+++ b/webapp/lib/regist.html
@@ -25,7 +25,7 @@
 				 <tr>
 				 <th class="itemsearchth"><span class="red">*</span>登录密码：</th>
             		<td class="itemsearchtd1">
-					<input type="password" id="psaaword" class="inputtext hide" name="password" onblur="password_onblur(this)" value="" maxlength="20" />
+					<input type="password" id="psaaword" class="inputtext hide" name="password" onblur="password_onblur(this)" value="" onfocus="password_onfocus(this)" maxlength="20" />
                     <input type="text" class="inputtext_gray" onFocus="passwordtext_onfocus(this)" value="输入6至20位密码" msg_num="" />
 					</td>
 					<td class="itemsearchtd2">
@@ -34,7 +34,7 @@
 				 <tr>
 				 <th class="itemsearchth"><span class="red">*</span>密码确认：</th>
             		<td class="itemsearchtd1">
-					<input type="password" id="passwordConfirm" class="inputtext hide" name="passwordConfirm" onblur="password_onblur(this)" value="" maxlength="20" />
+					<input type="password" id="passwordConfirm" class="inputtext hide" name="passwordConfirm" onblur="password_onblur(this)" value="" onfocus="password_onfocus(this)" maxlength="20" />
                     <input type="text" class="inputtext_gray" onFocus="passwordtext_onfocus(this)" value="输入6至20位密码" msg_num=""/>
 					</td>
 					<td class="itemsearchtd2">
